--- a/frontend/kendol/package.json
+++ b/frontend/kendol/package.json
@@ -7,11 +7,11 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "prop-types": "latest",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-pdf": "^3.0.5",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-pdf": "^4.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
