--- a/frontend/kendol/package.json
+++ b/frontend/kendol/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.10",
+    "@fortawesome/free-solid-svg-icons": "^5.6.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.4.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "prop-types": "latest",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-fa": "^5.0.0",
     "react-pdf": "^4.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
