--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
@@ -43,6 +39,7 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -59,11 +56,11 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.hibernate.dialect/sqlite-dialect -->
-    <dependency>
-        <groupId>org.hibernate.dialect</groupId>
-        <artifactId>sqlite-dialect</artifactId>
-        <version>0.1.0</version>
-    </dependency>
+        <dependency>
+            <groupId>com.zsoltfabok</groupId>
+            <artifactId>sqlite-dialect</artifactId>
+            <version>1.0</version>
+        </dependency>
 
 
     <!--JPA-->
@@ -84,11 +81,6 @@
         <version>2.3.0</version>
     </dependency>
 
-    <dependency>
-        <groupId>javax.xml.bind</groupId>
-        <artifactId>jaxb-api</artifactId>
-        <version>2.3.0</version>
-    </dependency>
 
     <dependency>
         <groupId>com.sun.xml.bind</groupId>
@@ -107,6 +99,12 @@
         <artifactId>activation</artifactId>
         <version>1.1.1</version>
     </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
 
     </dependencies>
 
